--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "axios": "^0.18.0",
+    "sqlite3": "^4.0.6",
     "vue": "^2.6.8",
     "vue-router": "^3.0.2"
   },
