--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "fs-extra": "^7.0.1",
     "marked": "^0.6.1",
     "sqlite3": "^4.0.6"
   }
